revise c4 assignment script links

--- a/assignments-labs/c4_assignment.html
+++ b/assignments-labs/c4_assignment.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-09-17">
+<meta name="dcterms.date" content="2025-09-18">
 
 <title>Class 4 Assignment: Working with US Census ACS Data across time and geographic scales.</title>
 <style>
@@ -137,7 +137,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 17, 2025</p>
+      <p class="date">September 18, 2025</p>
     </div>
   </div>
   
@@ -149,17 +149,17 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 <section id="preamble" class="level2">
 <h2 class="anchored" data-anchor-id="preamble">Preamble</h2>
-<p>In this fourth week’s assignment, we will utilize some of the scripting framework of <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c3_lab">Class 4 lab</a> to develop an R Markdown report that features two analysis workflows. The first is a time series analysis that begins in 2015 and ends in 2023. The second is a geographic comparative analysis using several geographic scales to determine how a selection of local NYC geographies relates to smaller scale (larger) geographies upwards to the nation itself.</p>
+<p>In this fourth week’s assignment, we will utilize some of the scripting framework of <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_lab">Class 4 lab</a> to develop an R Markdown report that features two analysis workflows. The first is a time series analysis that begins in 2015 and ends in 2023. The second is a geographic comparative analysis using several geographic scales to determine how a selection of local NYC geographies relates to smaller scale (larger) geographies upwards to the nation itself.</p>
 <p>Follow the sequence of steps below to first orient to this week’s content: lecture, materials and weekly reading(s). Once complete, move along to creating your R Markdown deliverable, making sure to upload the assignment deliverable, due Thursday, September 25th, 2025 at 11:59pm.</p>
 </section>
 <section id="week-4-class-4-materials" class="level2">
 <h2 class="anchored" data-anchor-id="week-4-class-4-materials">Week 4 Class 4 Materials:</h2>
 <ul>
-<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c3_agenda">Class 4 Agenda</a></li>
-<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c3_lab">Class 4 lab</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c3_lab3-script.R">Class 4 Assignment Script Option #1 - Poverty Rate</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c3_lab3-script.R">Class 4 Assignment Script Option #2 - Rent Burden</a></li>
-<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/assignment_3.Rmd">Class 4 Assignment .Rmd ‘starter file’</a></li>
+<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c4_agenda">Class 4 Agenda</a></li>
+<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c4_lab">Class 4 lab</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4-assignment4-script-1.r">Class 4 Assignment Script Option #1 - Poverty Rate</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c4-assignment4-script-2.r">Class 4 Assignment Script Option #2 - Rent Burden</a></li>
+<li><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/assignment_4.Rmd">Class 4 Assignment .Rmd ‘starter file’</a></li>
 <li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/lecture-slides/lecture.4/index.html">Class 4 Lecture Slides</a></li>
 </ul>
 </section>
