load c4 assignment - reading revision

--- a/assignments-labs/c4_assignment.html
+++ b/assignments-labs/c4_assignment.html
@@ -165,16 +165,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </section>
 <section id="week-4-class-4-reading" class="level2">
 <h2 class="anchored" data-anchor-id="week-4-class-4-reading">Week 4 Class 4 Reading:</h2>
-<ul>
-<li><a href="https://www.census.gov/content/dam/Census/library/working-papers/2001/acs/2001_Alexander_01.pdf">Alexander, Charles H. Still Rolling: Leslie Kish’s “Rolling Samples” and the American Community Survey. Proceedings of Statistics Canada Symposium 2001 — Achieving Data Quality in a Statistical Agency: A Methodological Perspective. Ottawa: Statistics Canada, 2001.</a></li>
-</ul>
-<p>This selected journal article by Charles Alexander situates Leslie Kish’s primary theoretical underpinning of the ‘rolling survey’ method to the American Community Survey (ACS) approach to collecting data. While a bit dry, the article lays out important considerations for spatial, temporal, and demographic details important to any survey, particularly the ACS that we use today.</p>
-<p>The 10 quiz questions will cover the concepts covered in the article.</p>
-<p>At 7am Friday, September 19th, the third weekly quiz will open in Canvas. Utilize the posted <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c4_agenda">Class 4 Agenda</a> to gain the quiz access code which will be posted towards the beginning of the agenda. Expect 10 questions in total that cover the reading above.</p>
-<p>The second, supplemental reading is a good resource to understanding all the specifics of the ACS across those very same dimensions discussed in the primary reading - spatial, temporal and demographic details of the survey. This document is located as follows; there will be no quiz questions on this resource:</p>
+<p>The following reading is a good resource to understanding all the specifics of the ACS across the dimensions discussed in the lecture - spatial, temporal and demographic details of the survey. This document is located as follows; the 10 question quiz next week will be limited to the following sections:</p>
+<ol type="1">
+<li>Understanding the ACS: The Basics ……………………………… 1</li>
+<li>Geographic Areas Covered in the ACS ……………………………. 8</li>
+<li>Understanding and Using ACS Single-Year and Multiyear Estimates ……. 13</li>
+</ol>
 <ul>
 <li><a href="https://www.census.gov/content/dam/Census/library/publications/2020/acs/acs_general_handbook_2020.pdf">UNDERSTANDING AND USING AMERICAN COMMUNITY SURVEY DATA: WHAT ALL DATA USERS NEED TO KNOW</a></li>
 </ul>
+<p>At 7am Friday, September 26th, the fourth weekly quiz will open in Canvas. Utilize the posted <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/agendas/c4_agenda">Class 4 Agenda</a> to gain the quiz access code which will be posted towards the beginning of the agenda. Expect 10 questions in total that cover the reading above.</p>
 </section>
 <section id="class-4-assignment" class="level2">
 <h2 class="anchored" data-anchor-id="class-4-assignment">Class 4 Assignment:</h2>
