--- a/assignments-labs/c5_lab.html
+++ b/assignments-labs/c5_lab.html
@@ -211,7 +211,7 @@ Note
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>This lab, like the course generally, utilizes macOS file path conventions. Windows users may need to adjust for this difference between their OS conventions and macOS. Traditionally, Windows utilizes the opposite ‘backward’ slash convention as well as naming explicitly the drive location: Windows: <code>C:\Users\username\Desktop\lab_5</code> Linux/macOS: <code>/Users/username/Desktop/lab_5</code></p>
+<p>This lab, like the course generally, utilizes macOS file path conventions. Windows users may need to adjust for this difference between their OS conventions and macOS. Traditionally, Windows traditionally utilizes the opposite ‘backward’ slash convention as well as naming explicitly the drive location: Windows: <code>C:\Users\username\Desktop\lab_5</code> Linux/macOS: <code>/Users/username/Desktop/lab_5</code></p>
 </div>
 </div>
 <ul>
@@ -319,16 +319,16 @@ Note
 <section id="concluding-remarks" class="level2">
 <h2 class="anchored" data-anchor-id="concluding-remarks">Concluding Remarks</h2>
 <p>In this fifth demonstration lab, we reviewed both census block group and tract geographies, and how to map them for ACS variables using choropleth, thematic mapping approaches and classification methods. We also flagged <code>NA</code> observations, but did allow for for zero <code>0</code> values to pass through to our final mapping.</p>
-<p>In this week’s <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c5_assignment">Assignment 5</a>, script #3 and #4 will be utilized for your own choice of community district in NYC.</p>
+<p>In this week’s <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c5_assignment">Assignment 5</a>, script #3 and #4 will be the basis for the two assignment scripts used for your own chosen community district in NYC.</p>
 <p>Access this lab as needed for review and preparation for <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c5_assignment">Assignment 5</a>.</p>
 </section>
 <section id="scripts-backup-data" class="level2">
 <h2 class="anchored" data-anchor-id="scripts-backup-data">Scripts &amp; Backup Data:</h2>
 <ul>
 <li><p><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c5_lab5-script-1.r">Class 5 Lab 5 R Script #1</a> - open in your RStudio <code>scripts</code> <em>File&gt;Open File&gt;lab_4&gt;scripts&gt;c5_lab5-script-1.r</em></p></li>
-<li><p><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c5_lab5-script-1.r">Class 5 Lab 5 R Script #2</a> - open in your RStudio <code>scripts</code> <em>File&gt;Open File&gt;lab_4&gt;scripts&gt;c5_lab5-script-2.r</em></p></li>
-<li><p><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c5_lab5-script-1.r">Class 5 Lab 5 R Script #3</a> - open in your RStudio <code>scripts</code> <em>File&gt;Open File&gt;lab_4&gt;scripts&gt;c5_lab5-script-3.r</em></p></li>
-<li><p><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c5_lab5-script-1.r">Class 5 Lab 5 R Script #4</a> - open in your RStudio <code>scripts</code> <em>File&gt;Open File&gt;lab_4&gt;scripts&gt;c5_lab5-script-4.r</em></p></li>
+<li><p><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c5_lab5-script-2.r">Class 5 Lab 5 R Script #2</a> - open in your RStudio <code>scripts</code> <em>File&gt;Open File&gt;lab_4&gt;scripts&gt;c5_lab5-script-2.r</em></p></li>
+<li><p><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c5_lab5-script-3.r">Class 5 Lab 5 R Script #3</a> - open in your RStudio <code>scripts</code> <em>File&gt;Open File&gt;lab_4&gt;scripts&gt;c5_lab5-script-3.r</em></p></li>
+<li><p><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c5_lab5-script-4.r">Class 5 Lab 5 R Script #4</a> - open in your RStudio <code>scripts</code> <em>File&gt;Open File&gt;lab_4&gt;scripts&gt;c5_lab5-script-4.r</em></p></li>
 <li><p><a href="https://weekly-materials.s3.us-west-1.amazonaws.com/lab_5_backup-data.zip">Class 5 Lab 5 Backup Data - as needed</a></p></li>
 </ul>
 </section>
