--- a/agendas/c5_agenda.html
+++ b/agendas/c5_agenda.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-09-24">
+<meta name="dcterms.date" content="2025-09-25">
 
 <title>Week 5 | Class 5 Agenda</title>
 <style>
@@ -79,7 +79,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 24, 2025</p>
+      <p class="date">September 25, 2025</p>
     </div>
   </div>
   
@@ -144,7 +144,7 @@ Important
 <h3 class="anchored" data-anchor-id="pm">12:10 - 12:30 pm</h3>
 <ul>
 <li>Attendance</li>
-<li>Review of <a href="https://weekly-submissions.s3.us-east-1.amazonaws.com/c4_pgud5160_submissions.pdf">Class 4 Submissions</a></li>
+<li>Review of <a href="https://weekly-submissions.s3.us-east-1.amazonaws.com/c4_pgud5160_submissions.zip">Class 4 Submissions</a></li>
 </ul>
 </section>
 <section id="pm-1" class="level3">
