load c5 agenda zip revision

--- a/agendas/c5_agenda.html
+++ b/agendas/c5_agenda.html
@@ -144,7 +144,7 @@ Important
 <h3 class="anchored" data-anchor-id="pm">12:10 - 12:30 pm</h3>
 <ul>
 <li>Attendance</li>
-<li>Review of <a href="https://weekly-submissions.s3.us-east-1.amazonaws.com/c4_pgud5160_submissions.zip">Class 4 Submissions</a></li>
+<li>Review of <a href="https://weekly-submissions.s3.us-east-1.amazonaws.com/c4_pgud5160_submissions.zip">Class 4 Submissions - zip</a></li>
 </ul>
 </section>
 <section id="pm-1" class="level3">
