--- a/agendas/c6_agenda.html
+++ b/agendas/c6_agenda.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-09-30">
+<meta name="dcterms.date" content="2025-10-02">
 
 <title>Week 6 | Class 6 Agenda</title>
 <style>
@@ -79,7 +79,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 30, 2025</p>
+      <p class="date">October 2, 2025</p>
     </div>
   </div>
   
@@ -144,7 +144,7 @@ Important
 <h3 class="anchored" data-anchor-id="pm">12:10 - 12:30 pm</h3>
 <ul>
 <li>Attendance</li>
-<li>Review of <a href="https://weekly-submissions.s3.us-east-1.amazonaws.com/c5_pgud5160_submissions.zip">Class 5 Submissions - zip</a></li>
+<li>Review of <a href="https://weekly-submissions.s3.us-east-1.amazonaws.com/c5_pgud5160_submissions.pdf">Class 5 Submissions</a></li>
 </ul>
 </section>
 <section id="pm-1" class="level3">
