--- a/assignments-labs/c8_lab.html
+++ b/assignments-labs/c8_lab.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-10-14">
+<meta name="dcterms.date" content="2025-10-15">
 
 <title>Class 8 Lab: NYC Evictions &amp; Rent Stablized Units - Tidyverse Experiments</title>
 <style>
@@ -113,7 +113,6 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <ul>
   <li><a href="#preamble" id="toc-preamble" class="nav-link active" data-scroll-target="#preamble">Preamble</a></li>
   <li><a href="#data" id="toc-data" class="nav-link" data-scroll-target="#data">Data</a></li>
-  <li><a href="#step-1-project-management-in-rstudio-for-lab_8-also-applicable-for-assignment_8" id="toc-step-1-project-management-in-rstudio-for-lab_8-also-applicable-for-assignment_8" class="nav-link" data-scroll-target="#step-1-project-management-in-rstudio-for-lab_8-also-applicable-for-assignment_8">Step 1: Project Management in RStudio for <code>lab_8</code> (also applicable for <code>assignment_8</code>)</a></li>
   <li><a href="#experiment-1-weekly-evictions-last-52-weeks" id="toc-experiment-1-weekly-evictions-last-52-weeks" class="nav-link" data-scroll-target="#experiment-1-weekly-evictions-last-52-weeks">EXPERIMENT 1 — Weekly evictions (last 52 weeks)</a></li>
   <li><a href="#experiment-2-weekly-evictions-by-borough-last-52-weeks" id="toc-experiment-2-weekly-evictions-by-borough-last-52-weeks" class="nav-link" data-scroll-target="#experiment-2-weekly-evictions-by-borough-last-52-weeks">EXPERIMENT 2 — Weekly evictions by BOROUGH (last 52 weeks)</a></li>
   <li><a href="#experiment-3-latest-12-weeks-sorted-table" id="toc-experiment-3-latest-12-weeks-sorted-table" class="nav-link" data-scroll-target="#experiment-3-latest-12-weeks-sorted-table">EXPERIMENT 3 — Latest 12 weeks (sorted table)</a></li>
@@ -124,14 +123,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <li><a href="#experiment-8-top-rs-owners-by-eviction-event-count" id="toc-experiment-8-top-rs-owners-by-eviction-event-count" class="nav-link" data-scroll-target="#experiment-8-top-rs-owners-by-eviction-event-count">EXPERIMENT 8 — Top RS owners by eviction event count</a></li>
   <li><a href="#experiment-9-rs-buildings-with-most-eviction-events" id="toc-experiment-9-rs-buildings-with-most-eviction-events" class="nav-link" data-scroll-target="#experiment-9-rs-buildings-with-most-eviction-events">EXPERIMENT 9 — RS buildings with most eviction events</a></li>
   <li><a href="#experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks" id="toc-experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks" class="nav-link" data-scroll-target="#experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks">EXPERIMENT 10 — Weekly eviction events at RS buildings (last 52 weeks)</a></li>
-  <li><a href="#experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks-1" id="toc-experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks-1" class="nav-link" data-scroll-target="#experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks-1">EXPERIMENT 10 — Weekly eviction events at RS buildings (last 52 weeks)</a>
-  <ul class="collapse">
   <li><a href="#experiment-11-borough-shares-eviction-events-vs-rs-unit-shares" id="toc-experiment-11-borough-shares-eviction-events-vs-rs-unit-shares" class="nav-link" data-scroll-target="#experiment-11-borough-shares-eviction-events-vs-rs-unit-shares">EXPERIMENT 11 — Borough shares: eviction events vs RS unit shares</a></li>
   <li><a href="#concluding-remarks" id="toc-concluding-remarks" class="nav-link" data-scroll-target="#concluding-remarks">Concluding Remarks</a></li>
   <li><a href="#assignment-8-link" id="toc-assignment-8-link" class="nav-link" data-scroll-target="#assignment-8-link">Assignment 8 Link:</a></li>
   <li><a href="#scripts-lab-data" id="toc-scripts-lab-data" class="nav-link" data-scroll-target="#scripts-lab-data">Scripts &amp; Lab Data:</a></li>
   <li><a href="#references" id="toc-references" class="nav-link" data-scroll-target="#references">References:</a></li>
-  </ul></li>
   </ul>
 </nav>
 </div>
@@ -151,7 +147,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 14, 2025</p>
+      <p class="date">October 15, 2025</p>
     </div>
   </div>
   
@@ -164,6 +160,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <section id="preamble" class="level2">
 <h2 class="anchored" data-anchor-id="preamble">Preamble</h2>
 <p>In this eighth demonstration lab, we will continue to repeat the project setup phase of previous weeks (setting the working directory to <code>lab_8</code>) then move along to working with the <code>tidyverse</code> package for both eviction and rent stabilization data for NYC. This lab can and should be used in conjunction with this week’s assignment 8 deliverable - <a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c8_assignment">Assignment 8</a>.</p>
+<p>This lab walks through a compact set of <strong>tidyverse</strong> workflows to explore NYC <strong>evictions</strong> and <strong>rent‑stabilized (RS)</strong> parcels:</p>
+<hr>
 </section>
 <section id="data" class="level2">
 <h2 class="anchored" data-anchor-id="data">Data</h2>
@@ -224,9 +222,9 @@ Note
 <p>This data subdirectory will be in <code>.zip</code> format; make sure to uncompress the directory before engaging it with this week’s lab script. Further, change the name from <code>lab_8_data-subdirectory</code> to simply <code>data</code> and place it into your <code>lab_8</code> directory.</p>
 </div>
 </div>
-</section>
-<section id="step-1-project-management-in-rstudio-for-lab_8-also-applicable-for-assignment_8" class="level2">
-<h2 class="anchored" data-anchor-id="step-1-project-management-in-rstudio-for-lab_8-also-applicable-for-assignment_8">Step 1: Project Management in RStudio for <code>lab_8</code> (also applicable for <code>assignment_8</code>)</h2>
+<hr>
+<section id="step-1-project-management-in-rstudio-for-lab_8-also-applicable-for-assignment_8" class="level4">
+<h4 class="anchored" data-anchor-id="step-1-project-management-in-rstudio-for-lab_8-also-applicable-for-assignment_8">Step 1: Project Management in RStudio for <code>lab_8</code> (also applicable for <code>assignment_8</code>)</h4>
 <p>As we have done for previous labs, we will create a <code>lab_8</code> project directory:</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
@@ -239,6 +237,8 @@ Note
 <p><code>docs/</code>: For documentation or R Markdown files.</p>
 <p><code>results/</code>: For outputs and generated results.</p>
 <p><code>scripts/</code>: For R scripts and analysis pipelines.</p>
+<hr>
+</section>
 <section id="step-2" class="level4">
 <h4 class="anchored" data-anchor-id="step-2">Step 2:</h4>
 <p>With the <code>lab_8.Rproj</code> established and the subdirectories for our data analyses established, we can print both the working directory and all the paths and files therein:</p>
@@ -261,6 +261,7 @@ Warning
 <p>This is fine; we want to simply make sure that the directory we created - <code>lab_8</code> is indeed the directory in which and from which we are and will be working.</p>
 </div>
 </div>
+<hr>
 </section>
 <section id="step-3" class="level4">
 <h4 class="anchored" data-anchor-id="step-3">Step 3:</h4>
@@ -279,6 +280,7 @@ Warning
 <span id="cb4-2"><a href="#cb4-2"></a>rs_path &lt;- "~/Desktop/lab_8/data/ny_likely_rs_2020.csv" # Rent Stabilized Data Path</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <p>To follow, we create two new tibble data frame objects named <code>ev</code> and <code>rs</code>; note that we are using the <code>mutate()</code> function address formatting issues across both tibbles.</p>
 <p>Before running the experiments, we need a series of helpers that target the join behavior and deal with setting the <code>gt</code> table results. Since these helpers are used across multiple experiments, we just set these up prior to <em>any</em> experiments and how them in temporary memory for our work session.</p>
+<hr>
 </section>
 </section>
 <section id="experiment-1-weekly-evictions-last-52-weeks" class="level2">
@@ -296,6 +298,7 @@ Warning
 <blockquote class="blockquote">
 <p><code>geom_line()</code> connects data points with lines, typically ordered by a variable on the x-axis, making it suitable for visualizing trends over time or relationships between ordered variables.</p>
 </blockquote>
+<hr>
 </section>
 <section id="experiment-2-weekly-evictions-by-borough-last-52-weeks" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-2-weekly-evictions-by-borough-last-52-weeks">EXPERIMENT 2 — Weekly evictions by BOROUGH (last 52 weeks)</h2>
@@ -307,6 +310,7 @@ Warning
 <li><code>arrange(BOROUGH, week)</code></li>
 </ul>
 <p>We then plot this tibble using the <code>geom_line()</code> format, but this time with each grouped <code>BOROUGH</code> adopting its own <code>geom_line()</code>.</p>
+<hr>
 </section>
 <section id="experiment-3-latest-12-weeks-sorted-table" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-3-latest-12-weeks-sorted-table">EXPERIMENT 3 — Latest 12 weeks (sorted table)</h2>
@@ -319,6 +323,7 @@ Warning
 <ul>
 <li><code>mutate(week = as.Date(week), evictions = number(evictions, accuracy = 1))</code></li>
 </ul>
+<hr>
 </section>
 <section id="experiment-4-rs-stock-by-borough-shares-of-buildings-units" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-4-rs-stock-by-borough-shares-of-buildings-units">EXPERIMENT 4 — RS stock by borough (shares of buildings &amp; units)</h2>
@@ -330,6 +335,7 @@ Warning
 <li><code>arrange(desc(share_units))</code></li>
 </ul>
 <p>To follow, we print as a <code>gt</code> following 4 new named attributes created with <code>mutate()</code> function.</p>
+<hr>
 </section>
 <section id="experiment-5-eda-rs-parcels-buildings-by-year-built-yearblt-yearly-bar" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-5-eda-rs-parcels-buildings-by-year-built-yearblt-yearly-bar">EXPERIMENT 5 — EDA — RS Parcels: Buildings by Year Built (YEARBLT), yearly bar</h2>
@@ -362,6 +368,7 @@ Warning
 <p>The code is as follows:</p>
 <p><code>rs_key &lt;- make_rs_key(rs)</code><br>
 <code>rs_ev  &lt;- join_rs_events(ev, rs_key)</code></p>
+<hr>
 </section>
 <section id="experiment-7-borough-rates-events-per-1000-rs-units-of-rs-units" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-7-borough-rates-events-per-1000-rs-units-of-rs-units">EXPERIMENT 7 — Borough rates: events per 1,000 RS units + % of RS units</h2>
@@ -375,25 +382,27 @@ Warning
 <li><code>count(BOROUGH, name = "evictions_at_rs")</code></li>
 </ul>
 <p>Finally, we create a <code>rs_rates</code> tibble data frame by <code>left_join</code> the <code>rs_units_upper</code> using <code>mutate()</code> and <code>arrange()</code> to get our rates that are then passed along to the <code>gt</code> plot.</p>
+<hr>
 </section>
 <section id="experiment-8-top-rs-owners-by-eviction-event-count" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-8-top-rs-owners-by-eviction-event-count">EXPERIMENT 8 — Top RS owners by eviction event count</h2>
 <p>To start, we create custom function to clean up the odd characters and spaces that will likely be present in our owners name column. Next, we create a new tibble data frame <code>top_owners</code> filtering out any that are <code>NA</code>, then count and sort the results and limit the results to just the top 15 with the <code>slice_head()</code> function. We will follow this with a <code>gt</code> table.</p>
+<hr>
 </section>
 <section id="experiment-9-rs-buildings-with-most-eviction-events" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-9-rs-buildings-with-most-eviction-events">EXPERIMENT 9 — RS buildings with most eviction events</h2>
 <p>In this version, we replicate the pattern of experiment 8 to capture not owners but the buildings (actually parcels based on the BBL). Here we create a tibble data frame object <code>top_bbls</code> and pass along to a final <code>gt</code> table.</p>
+<hr>
 </section>
 <section id="experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks">EXPERIMENT 10 — Weekly eviction events at RS buildings (last 52 weeks)</h2>
-<p>In this experiment, we create a new tibble data frame <code>top_bbls</code></p>
-</section>
-<section id="experiment-10-weekly-eviction-events-at-rs-buildings-last-52-weeks-1" class="level1">
-<h1>EXPERIMENT 10 — Weekly eviction events at RS buildings (last 52 weeks)</h1>
 <p>In this experiment, we subset the eviction events to just those in the rs buildings, and then pass the resulting tibble data frame object <code>ev_weekly_rs</code> to ggplot. Note that in the result, we will see the same pattern as <em>EXPERIMENT 1 — Weekly evictions (last 52 weeks)</em>, but the weekly evictions on the y axis are smaller in number because we are only considering those evictions in rs buildings, not all evictions.</p>
+<hr>
+</section>
 <section id="experiment-11-borough-shares-eviction-events-vs-rs-unit-shares" class="level2">
 <h2 class="anchored" data-anchor-id="experiment-11-borough-shares-eviction-events-vs-rs-unit-shares">EXPERIMENT 11 — Borough shares: eviction events vs RS unit shares</h2>
 <p>In this final experiment, we will explore further the eviction events within the rs buildings; and particularly considering the unit counts per bbl in the <code>rs_key</code> from experiment 6. We create a final object <code>share_tbl</code> from a series of tidyverse functions, passing along to print as a <code>gt</code> table. We will review the footnotes in the resulting table to help our interpretation of the results.</p>
+<hr>
 </section>
 <section id="concluding-remarks" class="level2">
 <h2 class="anchored" data-anchor-id="concluding-remarks">Concluding Remarks</h2>
@@ -404,12 +413,14 @@ Warning
 <li>EXPERIMENT 3 — Latest 12 weeks (sorted table)</li>
 <li>EXPERIMENT 10 — Weekly eviction events at RS buildings (last 52 weeks)</li>
 </ul>
+<hr>
 </section>
 <section id="assignment-8-link" class="level2">
 <h2 class="anchored" data-anchor-id="assignment-8-link">Assignment 8 Link:</h2>
 <ul>
-<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c8_assignment">Assignment 8</a>.</li>
+<li><a href="https://tns-course-repositories.github.io/Methods_1-PGUD5160-DUE-Program-fall25/assignments-labs/c8_assignment">Assignment 8</a></li>
 </ul>
+<hr>
 </section>
 <section id="scripts-lab-data" class="level2">
 <h2 class="anchored" data-anchor-id="scripts-lab-data">Scripts &amp; Lab Data:</h2>
@@ -417,6 +428,7 @@ Warning
 <li><p><a href="https://github.com/tns-course-repositories/Methods_1-PGUD5160-DUE-Program-fall25/blob/main/scripts/c8_lab8-script-1.R">Class 8 Lab 8 R Script #1</a> - open in your RStudio <code>scripts</code> <em>File&gt;Open File&gt;lab_8&gt;scripts&gt;c8_lab8-script-1.R</em></p></li>
 <li><p><a href="https://weekly-materials.s3.us-west-1.amazonaws.com/lab_8_data_subdirectory.zip">Data Subdirectory Download</a></p></li>
 </ul>
+<hr>
 </section>
 <section id="references" class="level2">
 <h2 class="anchored" data-anchor-id="references">References:</h2>
@@ -439,7 +451,6 @@ Warning
 <li><a href="https://data.cityofnewyork.us/Housing-Development/Housing-Maintenance-Code-Violations/wvxf-dwi5/about_data">HPD Housing Maintenance Code Violations</a></li>
 <li><a href="https://data.cityofnewyork.us/Housing-Development/DOB-Violations/3h2n-5cm9/about_data">DOB Violations</a></li>
 </ul>
-</section>
 </section>
 
 </main>
