load c9 lab files

--- a/assignments-labs/c9_lab.html
+++ b/assignments-labs/c9_lab.html
@@ -660,10 +660,16 @@ By combining <code>lubridate</code>, <code>forcats</code>, <code>sf</code> and <
 </section>
 <section id="wrap-up-reflection" class="level2">
 <h2 class="anchored" data-anchor-id="wrap-up-reflection">💬 Wrap-Up Reflection</h2>
-<p><strong>Discussion prompts:</strong> - What <em>patterns over time</em> did you find?<br>
-- Did you notice <em>seasonal</em>, <em>cyclical</em>, or <em>irregular</em> behavior?<br>
-- How does aggregating by month vs.&nbsp;year change the story?<br>
-- In the case of the buildings data set, what <em>insights</em> did we achieve in spatial mapping vs non-spatial plotting?</p>
+<p>Discussion Points:</p>
+<ul>
+<li>What <em>patterns over time</em> did you find?<br>
+</li>
+<li>Did you notice <em>seasonal</em>, <em>cyclical</em>, or <em>irregular</em> behavior?<br>
+</li>
+<li>How does aggregating by month vs.&nbsp;year change the story?<br>
+</li>
+<li>In the case of the buildings data set, what <em>insights</em> did we achieve in spatial mapping vs non-spatial plotting?</li>
+</ul>
 <hr>
 </section>
 <section id="assignment-8-link" class="level2">
